--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -46,14 +46,14 @@ jobs:
       # Step 7: Build and push Docker image
       - name: Build and push Docker image
         run: |
-          docker build -t us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-docker-repo/my-app:$GITHUB_SHA .
-          docker push us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-docker-repo/my-app:$GITHUB_SHA
+          docker build --platform linux/amd64 -t gcr.io/${{secrets.GCP_PROJECT_ID}}/my-app-image .
+          docker push gcr.io/${{secrets.GCP_PROJECT_ID}}/my-app-image
 
       # Step 8: Deploy to Google Cloud Run
       - name: Deploy to Google Cloud Run
         run: |
           gcloud run deploy my-app \
-            --image us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-docker-repo/my-app:$GITHUB_SHA \
+            --image grc.io/${{ secrets.GCP_PROJECT_ID }}/my-app \
             --platform managed \
             --region ${{ secrets.GCP_REGION }} \
             --allow-unauthenticated
