--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,10 +32,11 @@ jobs:
         run: npm run build
 
       # Step 5: Set up Google Cloud credentials
-      - name: Set up Google Cloud credentials
-        uses: google-github-actions/auth@v1
-        with:
-          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+      - name: Authenticate with Google Cloud
+        run: |
+          echo "${{secrets.GOOGLE_CREDENTIALS}}" > ./google-credentials.json
+          gcloud auth login --brief --cred-file=./google-credentials.json --update-adc
+          gcloud auth configure-docker --quiet
 
       # Step 6: Configure gcloud CLI
       - name: Configure gcloud CLI
