--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,33 +32,29 @@ jobs:
         run: npm run build
 
       # Step 5: Set up Google Cloud credentials
-      - name: Authenticate with Google Cloud
-        run: |
-          echo "${{ secrets.GOOGLE_CREDENTIALS }}" > ./google-credentials.json
-          gcloud auth activate-service-account --key-file ./google-credentials.json
-          gcloud auth configure-docker --quiet
-
-      - name: Debug credentials file
-        run: cat ./google-credentials.json
-
+      - name: Set up Google Cloud credentials
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
 
       # Step 6: Configure gcloud CLI
       - name: Configure gcloud CLI
         run: |
           gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-          gcloud auth configure-docker
+          gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://us-central1-docker.pkg.dev
+
 
       # Step 7: Build and push Docker image
       - name: Build and push Docker image
         run: |
           docker build --platform linux/amd64 -t us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-docker-repo/my-app .
-          docker push us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-docker-repo/my-app
+          docker push us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-docker-repo/my-app:$GITHUB_SHA
 
       # Step 8: Deploy to Google Cloud Run
       - name: Deploy to Google Cloud Run
         run: |
           gcloud run deploy my-app \
-            --image us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-docker-repo/my-app \
+            --image us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-docker-repo/my-app:$GITHUB_SHA \
             --platform managed \
             --region ${{ secrets.GCP_REGION }} \
             --allow-unauthenticated
