--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -57,8 +57,7 @@ jobs:
       - name: Configure gcloud CLI
         run: |
           gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-          gcloud auth configure-docker us-central1-docker.pkg.dev
-          gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin 
+          gcloud auth configure-docker
 
       # Step 7: Build and push Docker image
       - name: Build and push Docker image
