--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -51,25 +51,49 @@ jobs:
         with:
           credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
 
+      - name: 'Docker Auth'
+        run: |-
+            gcloud auth configure-docker "${{env.GAR_LOCATION}}-docker.pkg.dev"
+  
+      - name: 'Build and Push Container'
+        run: |-
+            docker build -t "$${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}" ./
+            docker push "$${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
+          
+      - name: 'Deploy to Cloud Run'
+  
+          # END - Docker auth and build
+  
+        uses: 'google-github-actions/deploy-cloudrun@33553064113a37d688aa6937bacbdc481580be17' # google-github-actions/deploy-cloudrun@v2
+        with:
+            service: '${{ env.SERVICE }}'
+            region: '${{ env.REGION }}'
+            # NOTE: If using a pre-built image, update the image name below:
+  
+            image: '${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}'
+        # If required, use the Cloud Run URL output in later steps
+      - name: 'Show output'
+        run: |2-
 
 
-      # Step 6: Configure gcloud CLI
-      - name: Configure gcloud CLI
-        run: |
-          gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-          gcloud auth configure-docker
 
-      # Step 7: Build and push Docker image
-      - name: Build and push Docker image
-        run: |
-          docker build -t us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-repo/my-app .
-          docker push us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-repo/my-app
+      # # Step 6: Configure gcloud CLI
+      # - name: Configure gcloud CLI
+      #   run: |
+      #     gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
+      #     gcloud auth configure-docker
 
-      # Step 8: Deploy to Google Cloud Run
-      - name: Deploy to Google Cloud Run
-        run: |
-         gcloud run deploy my-app \
-          --image us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-repo/my-app \
-          --platform managed \
-          --region ${{ secrets.GCP_REGION }} \
-          --allow-unauthenticated
+      # # Step 7: Build and push Docker image
+      # - name: Build and push Docker image
+      #   run: |
+      #     docker build -t us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-repo/my-app .
+      #     docker push us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-repo/my-app
+
+      # # Step 8: Deploy to Google Cloud Run
+      # - name: Deploy to Google Cloud Run
+      #   run: |
+      #    gcloud run deploy my-app \
+      #     --image us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-repo/my-app \
+      #     --platform managed \
+      #     --region ${{ secrets.GCP_REGION }} \
+      #     --allow-unauthenticated
