--- a/.github/workflows/testGCP.yaml
+++ b/.github/workflows/testGCP.yaml
@@ -95,8 +95,9 @@ jobs:
     
         - name: 'Build and Push Container'
           run: |-
-              docker build -t "$${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{env.GAR_LOCATION}}/${{ env.SERVICE }}:${{ github.sha }}" ./
-              docker push "$${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{env.GAR_LOCATION}}/${{ env.SERVICE }}:${{ github.sha }}"
+              DOCKER_TAG="$${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{env.GAR_LOCATION}}/${{ env.SERVICE }}:${{ github.sha }}" ./
+              docker build --tag "${DOCKER_TAG}"
+              docker push ${DOCKER_TAG}
             
 
 
@@ -109,7 +110,7 @@ jobs:
               service: '${{ env.SERVICE }}'
               region: '${{ env.REGION }}'
               # NOTE: If using a pre-built image, update the image name below:
-              image: '${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}'
+              image: "$${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{env.GAR_LOCATION}}/${{ env.SERVICE }}:${{ github.sha }}"
           # If required, use the Cloud Run URL output in later steps
         - name: 'Show output'
           run: |2-
