--- a/.github/workflows/testGCP.yaml
+++ b/.github/workflows/testGCP.yaml
@@ -102,16 +102,13 @@ jobs:
 
 
         - name: 'Deploy to Cloud Run'
-    
-            # END - Docker auth and build
-    
-          uses: 'google-github-actions/deploy-cloudrun@33553064113a37d688aa6937bacbdc481580be17' # google-github-actions/deploy-cloudrun@v2
-          with:
-              service: '${{ env.SERVICE }}'
-              region: '${{ env.REGION }}'
-              # NOTE: If using a pre-built image, update the image name below:
-              image: "$${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{env.GAR_NAME}}/${{ env.SERVICE }}:${{ github.sha }}"
-          # If required, use the Cloud Run URL output in later steps
+          run: |
+              IMAGE_TAG="${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
+              gcloud run deploy ${{ env.SERVICE }} \
+                --image $IMAGE_TAG \
+                --update-labels managed-by=github-actions,commit-sha=${{ github.sha }} \
+                --format json \
+                --region ${{ env.REGION }}
         - name: 'Show output'
           run: |2-
 
