--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,7 +23,6 @@ jobs:
         with:
           version: 'latest'
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -32,14 +31,14 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: false
-          tags: node-deploy:latest
+          tags: node-deploy
           platforms: linux/amd64
       
       - name: Deploy to Cloud Run
         uses: google-github-actions/deploy-cloudrun@main
         with:
           service: node-deploy
-          image: gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy:latest
+          image: gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy
           region: europe-west1
           platform: managed
           allow-unauthenticated: true
