--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,14 +22,14 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: false
-          tags: node-deploy
+          tags: node-deploy:latest
           platforms: linux/amd64
       
       - name: Deploy to Cloud Run
         uses: google-github-actions/deploy-cloudrun@main
         with:
           service: node-deploy
-          image: gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy
+          image: gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy:latest
           region: europe-west1
           platform: managed
           allow-unauthenticated: true
