--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,4 +31,5 @@ jobs:
           service: node-deploy
           image: gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy:latest
           region: europe-west1
+          platform: managed
           allow-unauthenticated: true
