--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,6 +6,10 @@ on:
       - main
   workflow_dispatch:
 
+permissions:
+        id-token: write
+        contents: read
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -14,6 +18,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Authenticate to Google Cloud
+        id: auth
         uses: google-github-actions/auth@v1
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
@@ -21,15 +26,15 @@ jobs:
       - name: Build Docker image
         uses: docker/build-push-action@v4
         with:
-          push: true
-          tags: node-deploy:latest
+          push: false
+          tags: node-deploys
           platforms: linux/amd64
       
       - name: Deploy to Cloud Run
         uses: google-github-actions/deploy-cloudrun@main
         with:
           service: node-deploy
-          image: gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy:latest
+          image: gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy
           region: europe-west1
           platform: managed
           allow-unauthenticated: true
