--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,14 +1,10 @@
-name: Deploy
+name: Deploy 
 
 on:
   push:
     branches:
       - main
   workflow_dispatch:
-
-permissions:
-        id-token: write
-        contents: read
 
 jobs:
   deploy:
@@ -18,7 +14,6 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Authenticate to Google Cloud
-        id: auth
         uses: google-github-actions/auth@v1
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
@@ -26,15 +21,16 @@ jobs:
       - name: Build Docker image
         uses: docker/build-push-action@v4
         with:
+          context: backend/.
           push: false
-          tags: node-deploys
+          tags: node-test:latest
           platforms: linux/amd64
       
       - name: Deploy to Cloud Run
         uses: google-github-actions/deploy-cloudrun@main
         with:
-          service: node-deploy
-          image: gcr.io/student-sandbox-project/node-deploy
+          service: node-test
+          image: gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-test:latest
           region: europe-west1
           platform: managed
           allow-unauthenticated: true
