--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,18 +23,19 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Build Docker image
+      - name: Build and Push Docker image
         uses: docker/build-push-action@v4
         with:
-          push: false
-          tags: node-deploy
-          platforms: linux/amd64
+            context: .
+            push: true
+            tags: gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy
+            platforms: linux/amd64
       
       - name: Deploy to Cloud Run
         uses: google-github-actions/deploy-cloudrun@main
         with:
           service: node-deploy
-          image: gcr.io/student-sandbox-project/node-deploy
+          image: gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy
           region: europe-west1
           platform: managed
           allow-unauthenticated: true
