--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,6 +23,9 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
+      - name: Configure Docker for Google Artifact Registry
+        run: gcloud auth configure-docker    
+
       - name: Build and Push Docker image
         uses: docker/build-push-action@v4
         with:
