--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,7 +24,7 @@ jobs:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
       - name: Configure Docker for Google Artifact Registry
-        run: gcloud auth configure-docker    
+        run: gcloud auth configure-docker europe-west1-docker.pkg.dev
 
       - name: Build and Push Docker image
         uses: docker/build-push-action@v4
