--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,22 +23,18 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Configure Docker for Google Artifact Registry
-        run: gcloud auth configure-docker europe-west1-docker.pkg.dev
-
       - name: Build and Push Docker image
         uses: docker/build-push-action@v4
         with:
-            context: .
             push: true
-            tags: europe-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-docker-repo/node-deploy
+            tags: gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy .
             platforms: linux/amd64
       
       - name: Deploy to Cloud Run
         uses: google-github-actions/deploy-cloudrun@main
         with:
           service: node-deploy
-          image:  europe-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-docker-repo/node-deploy
+          image:  gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy
           region: europe-west1
           platform: managed
           allow-unauthenticated: true
