--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Build and Push Docker image
         uses: docker/build-push-action@v4
         with:
-            push: true
+            push: false
             tags: gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy .
             platforms: linux/amd64
       
