--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,30 +25,51 @@ jobs:
 
           
 
-      - name: Build and Push Docker image
-        uses: docker/build-push-action@v4
-        with:
-            push: false
-            context: .
-            tags: gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy-yacine:latest
-            platforms: linux/amd64
+    #   - name: Build and Push Docker image
+    #     uses: docker/build-push-action@v4
+    #     with:
+    #         push: false
+    #         context: .
+    #         tags: gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy-yacine:latest
+    #         platforms: linux/amd64  
+
+    #   - name: Deploy to Cloud Run
+    #     uses: google-github-actions/deploy-cloudrun@main
+    #     with:
+    #       service: node-deploy-yacine
+    #       image:  gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy-yacine:latest
+    #       region: europe-west1
+    #       platform: managed
+    #       allow-unauthenticated: true
+
+
+      - name: Configure gcloud CLI
+        run: |
+          gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
+          gcloud auth configure-docker europe-west1-docker.pkg.dev
+
+      # Step 7: Build and push Docker image
+      - name: Build and push Docker image
+        run: |
+          docker build -t europe-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-docker-repo/my-app .
+          docker push europe-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-docker-repo/my-app
 
       - name: Debug Docker Images
         run: docker images
 
       - name: Allow unauthenticated access
         run: |
-              gcloud run services add-iam-policy-binding node-deploy-yacine \
+              gcloud run services add-iam-policy-binding nmy-app \
                 --member="allUsers" \
                 --role="roles/run.invoker" \
                 --region=europe-west1 \
-                --platform=managed      
-      
-      - name: Deploy to Cloud Run
-        uses: google-github-actions/deploy-cloudrun@main
-        with:
-          service: node-deploy-yacine
-          image:  gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy-yacine:latest
-          region: europe-west1
-          platform: managed
-          allow-unauthenticated: true
+                --platform=managed    
+
+      # Step 8: Deploy to Google Cloud Run
+      - name: Deploy to Google Cloud Run
+        run: |
+          gcloud run deploy my-app \
+            --image europe-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-docker-repo/my-app \
+            --platform managed \
+            --region ${{ secrets.GCP_REGION }} \
+            --allow-unauthenticated
