--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,43 +23,30 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-    #   - name: Build and Push Docker image
-    #     uses: docker/build-push-action@v4
-    #     with:
-    #         push: false
-    #         context: .
-    #         tags: gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy-yacine:latest
-    #         platforms: linux/amd64
-
-      - name: Build and push Docker image
-        run: |
-              docker build --platform linux/amd64 -t gcr.io/student-sandbox-project/node-deploy-test .
-              docker push gcr.io/student-sandbox-project/node-deploy-test
+      - name: Build and Push Docker image
+        uses: docker/build-push-action@v4
+        with:
+            push: false
+            context: .
+            tags: gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy-yacine:latest
+            platforms: linux/amd64
 
       - name: Debug Docker Images
         run: docker images
 
       - name: Allow unauthenticated access
         run: |
-              gcloud run services add-iam-policy-binding node-deploy-test \
+              gcloud run services add-iam-policy-binding node-deploy-yacine \
                 --member="allUsers" \
                 --role="roles/run.invoker" \
                 --region=europe-west1 \
-                --platform=managed         
-    #   - name: Deploy to Cloud Run
-    #     uses: google-github-actions/deploy-cloudrun@main
-    #     with:
-    #       service: node-deploy-yacine
-    #       image:  gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy-yacine
-    #       region: europe-west1
-    #       platform: managed
-    #       allow-unauthenticated: true
-
-
-      - name: Deploy to Clound
-        run: |
-          gcloud run deploy node-deploy-test \
-          --image gcr.io/student-sandbox-project/node-deploy-test \
-          --platform managed \
-          --region europe-west1 \
-          --allow-unauthenticated
+                --platform=managed      
+      
+      - name: Deploy to Cloud Run
+        uses: google-github-actions/deploy-cloudrun@main
+        with:
+          service: node-deploy-yacine
+          image:  gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy-yacine
+          region: europe-west1
+          platform: managed
+          allow-unauthenticated: true
