--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -38,7 +38,7 @@ jobs:
         run: sleep 30
       
       - name: Deploy to Cloud Run
-        uses: google-github-actions/deploy-cloudrun@mv1
+        uses: google-github-actions/deploy-cloudrun@main
         with:
           service: node-deploy-yacine
           image:  gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy-yacine:latest
