--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,8 +26,8 @@ jobs:
       - name: Build and Push Docker image
         uses: docker/build-push-action@v4
         with:
-            push: true
-            context: .
+            push: false
+            context: backend/.
             tags: node-deploy-yacine:latest
             platforms: linux/amd64
         
