--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,14 +34,21 @@ jobs:
       - name: Wait for server to be ready
         run: sleep 30
       
-      - name: Deploy to Cloud Run
-        uses: google-github-actions/deploy-cloudrun@main
-        with:
-          service: node-deploy-yacine
-          image:  gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy-yacine:latest
-          region: europe-west1
-          platform: managed
+    #   - name: Deploy to Cloud Run
+    #     uses: google-github-actions/deploy-cloudrun@main
+    #     with:
+    #       service: node-deploy-yacine
+    #       image:  gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy-yacine:latest
+    #       region: europe-west1
+    #       platform: managed
           
+      - name: Deploy to Google Cloud Run
+        run: |
+            gcloud run deploy node-deploy-yacine \        
+            --image gcr.io/student-sandbox-project/node-deploy-yacine:latest \
+            --platform managed \
+            --region europe-west1 \
+            --allow-unauthenticated
 
       
 
