--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -39,6 +39,10 @@ jobs:
     #       image:  gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy-yacine:latest
     #       region: europe-west1
     #       platform: managed
+
+      - name: Verify Image Exists
+        run: |
+            gcloud container images describe gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy-yacine:latest
           
       - name: Deploy to Google Cloud Run
         run: |
