--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,6 +23,10 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
+      - name: Configure Docker to use gcloud as a credential helper
+        run: |
+            gcloud auth configure-docker --quiet
+
       - name: Build and Push Docker image
         uses: docker/build-push-action@v4
         with:
