--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Build and Push Docker image
         uses: docker/build-push-action@v4
         with:
-            push: true
+            push: false
             context: backend/.
             tags: node-deploy-yacine:latest
             platforms: linux/amd64
