--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-name: Deploy 
+name: Deploy
 
 on:
   push:
@@ -9,36 +9,57 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v1
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
+          node-version: '16' 
+
+      - name: Install dependencies
+        run: npm install
+        working-directory: ./backend
+          
+      - name: Google Auth
+        id: auth
+        uses: 'google-github-actions/auth@v1'
+        with:
+          token_format: 'access_token'
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Build Docker image
-        uses: docker/build-push-action@v4
+      - name: Docker Auth
+        id: docker-auth
+        uses: 'docker/login-action@v1'
         with:
-          context: backend/.
-          push: false
-          tags: node-deploy-test
-          platforms: linux/amd64
-      
-      - name: Deploy to Cloud Run
-        uses: google-github-actions/deploy-cloudrun@main
-        with:
-          service: node-deploy-test
-          image: gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy-test
-          region: europe-west1
-          platform: managed
-          allow-unauthenticated: true
+          username: 'oauth2accesstoken'
+          password: '${{ steps.auth.outputs.access_token }}'
+          registry: 'gcr.io'
 
-      - name: Allow unauthenticated access
+      - name: Build and Push Docker Image
+        working-directory: ./backend
         run: |
-          gcloud run services add-iam-policy-binding node-deploy-test \
-            --member="allUsers" \
-            --role="roles/run.invoker" \
-            --region=europe-west1 \
-            --platform=managed
+          docker build --build-arg DB_HOST=${{ secrets.DB_HOST }} \
+            --build-arg DB_PORT=${{ secrets.DB_PORT }} \
+            --build-arg DB_DATABASE=${{ secrets.DB_DATABASE }} \
+            --build-arg DB_USERNAME=${{ secrets.DB_USERNAME }} \
+            --build-arg DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
+            --build-arg DB_TYPE=${{ secrets.DB_TYPE }} \
+            --build-arg PORT=${{ secrets.PORT }} \
+            -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy-yacine:latest .
+          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/node-deploy-yacine:latest
+
+      - name: Deploy to Cloud Run
+        uses: google-github-actions/deploy-cloudrun@v1
+        with:
+          service: node-deploy-yacine
+          image: gcr.io/${{ secrets.GCP_PROJECT_ID}}/node-deploy-yacine
+          region: ${{ secrets.GCP_REGION }}
+          platform: managed
+          allow-authenticated: true
+        
+        
